<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.perrakcwu.app2accountidentify.AccountSettings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_account_settings"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enterCredPrompt2"
        android:id="@+id/textView7"
        android:width="305dp"
        android:textAlignment="center"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/userNameLabel"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_toStartOf="@+id/textView6" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/userPassLabel"
        android:id="@+id/textView9"
        android:layout_below="@+id/editText4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_alignEnd="@+id/textView8" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/editText4"
        android:layout_alignEnd="@+id/editText4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/credentialChangeLabel"
        android:id="@+id/textView10"
        android:layout_below="@+id/editText5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/button4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:layout_below="@+id/textView10"
        android:layout_alignEnd="@+id/editText5"
        android:layout_toEndOf="@+id/textView10"
        android:layout_alignStart="@+id/editText5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeNameButton"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button4"
        android:layout_alignParentStart="true"
        android:onClick="changeUserName"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changePassButton"
        android:id="@+id/button4"
        android:layout_below="@+id/editText6"
        android:layout_alignParentEnd="true"
        android:onClick="changeUserPass"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/textView"
        android:height="100dp"
        android:width="300dp"
        android:layout_below="@+id/button3"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button4" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goFirstView"
        android:id="@+id/button5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:width="150dp"
        android:onClick="goToNextView2"/>

</RelativeLayout>
